# F1_project

./: .gitignore  README.md  build_exe.bat  pyproject.toml  requirements.txt  run_app.bat
data/: sample_race_data.json
scripts/: build_windows_exe.py  run_app.py
src/f1_predictor/: __init__.py  __main__.py  paths.py  runtime.py
src/f1_predictor/application/: controller.py
src/f1_predictor/data/: __init__.py  repository.py
src/f1_predictor/domain/: calibration.py  models.py  strategies.py
src/f1_predictor/presentation/: __init__.py  tk_app.py  view_models.py
tests/: test_calibration.py  test_controller.py  test_paths.py  test_repository.py  test_smoke_flow.py  test_strategies.py  test_ui_smoke.py  test_view_models.py
