[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-predictor"
version = "0.2.0"
description = "Windows-first desktop app for explainable Formula 1 pre-race forecasts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastf1>=3.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
